// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValidationErrors renders dataAttr as expected 1`] = `
<div>
  <div
    data-amplify-sign-up-errors="true"
  >
    <p
      class="amplify-text amplify-text--error"
      data-variation="error"
      role="alert"
    >
      mock error 1
    </p>
    <p
      class="amplify-text amplify-text--error"
      data-variation="error"
      role="alert"
    >
      mock error 2
    </p>
  </div>
</div>
`;

exports[`ValidationErrors renders errors as expected 1`] = `
<div>
  <div>
    <p
      class="amplify-text amplify-text--error"
      data-variation="error"
      role="alert"
    >
      mock error 1
    </p>
    <p
      class="amplify-text amplify-text--error"
      data-variation="error"
      role="alert"
    >
      mock error 2
    </p>
  </div>
</div>
`;
